pulse: Revert the use of capture volumes added in 5c57272a.

Using capture controls does not give proper mute handling.
This is why all streams in the PA backend are treated as 'playback'
even if they are technically capture streams/devices.

This fixes two problems:
 1. You cannot mute mics or recording streams
 2. Capture volume is set to crazy high values

BUG: 315920
(cherry picked from commit 64afb1660b808ea8f1ba3d8d54a5db1cfe5a2acd)